# q2zugferd

./: .gitignore  MANIFEST.in  README.md  build.ps1  dev.py  pyproject.toml  q2zugferd_pdf.py  q2zugferd_xml.py  test-build.ps1
q2zugferd/: __init__.py  q2zugferd_pdf.py  q2zugferd_xml.py  version.py
tests/: test1_.py
