[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q2zugferd"
version = "0.1.3"
description = "ZUGFeRD / Factur-X PDF and XML generator"
readme = "README.md"
authors = [
    { name = "Andrei Puchko" }
]
requires-python = ">=3.9"
dependencies = [
    "pikepdf",
    "lxml"
]

[tool.setuptools]
packages = ["q2zugferd"]

# package-data for ICC
[tool.setuptools.package-data]
q2zugferd = ["icc/*.icc"]
